Fixed some alignment problems

--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body {
     font-family: 'Open Sans', sans-serif;
     margin-left: 200px;
     margin-right: 200px;
-    background-color: #ffdcaa;
+    background-color: #b6986d;
 }
 
 .topmenu.topbar {
-    box-shadow: none;
-    border: none;
+    box-shadow: black;
+    border: black;
     background-color: tan;
     padding-top: 5px;
     height: 45px;
@@ -24,12 +24,16 @@ body {
     font-family: Georgia;
     font-size: medium;
     text-align: left;
+    padding-top: 17px;
+    padding-left: 3px;
 }
 
 .login-logout {
     font-family: Georgia;
     font-size: medium;
     text-align: right;
+    padding-top: 17px;
+    padding-right: 3px;
 }
 
 p {
